--- a/world/gedit-plugins/.artixlinux/pkgbase.yaml
+++ b/world/gedit-plugins/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gedit-plugins
-  version: 48.1-2
+  version: 48.2-1
   arch:
     - x86_64
   pkgname:
     - gedit-plugins
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.1-2
+    version: 48.2-1
     packages:
-      - gedit-plugins-48.1-2-x86_64.pkg.tar.zst
+      - gedit-plugins-48.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
