--- a/world/libgedit-gfls/.artixlinux/pkgbase.yaml
+++ b/world/libgedit-gfls/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: libgedit-gfls
-  version: 1:0.2.1-1
+  version: 1:0.3.0-1
   arch:
     - x86_64
   pkgname:
     - libgedit-gfls
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-goblins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:0.2.1-1
+    version: 1:0.3.0-1
     packages:
-      - libgedit-gfls-1:0.2.1-1-x86_64.pkg.tar.zst
+      - libgedit-gfls-1:0.3.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
