--- a/world/libgedit-tepl/.artixlinux/pkgbase.yaml
+++ b/world/libgedit-tepl/.artixlinux/pkgbase.yaml
@@ -2,14 +2,14 @@
 team: world
 pkgbase:
   name: libgedit-tepl
-  version: 6.12.0-2
+  version: 6.13.0-1
   arch:
     - x86_64
   pkgname:
     - libgedit-tepl
 actions:
   addRepo: world
-  removeRepo: world-gremlins
+  removeRepo: world-goblins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.12.0-2
+    version: 6.13.0-1
     packages:
-      - libgedit-tepl-6.12.0-2-x86_64.pkg.tar.zst
+      - libgedit-tepl-6.13.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
