--- a/world/libgedit-tepl/PKGBUILD
+++ b/world/libgedit-tepl/PKGBUILD
@@ -1,12 +1,13 @@
-# Maintainer: Fabian Bornschein <fabiscafe@archlinux.org>
+# Maintainer: Balló György <ballogyor+arch at gmail dot com>
+# Contributor: Fabian Bornschein <fabiscafe@archlinux.org>
 
 pkgname=libgedit-tepl
-pkgver=6.12.0
-pkgrel=2
+pkgver=6.13.0
+pkgrel=1
 pkgdesc='Library that eases the development of GtkSourceView-based text editors and IDEs'
-arch=('x86_64')
+arch=(x86_64)
 url='https://gitlab.gnome.org/World/gedit/libgedit-tepl'
-license=('LGPL-3.0-or-later')
+license=(LGPL-3.0-or-later)
 depends=(
   cairo
   glib2
@@ -23,16 +24,17 @@ depends=(
 makedepends=(
   git
   glib2-devel
-  gtk-doc
   gobject-introspection
+  gtk-doc
   meson
 )
 checkdepends=(xorg-server-xvfb)
 conflicts=(tepl)
 replaces=(tepl)
 provides=(libgedit-tepl-6.so)
-source=("git+https://gitlab.gnome.org/World/gedit/libgedit-tepl.git#tag=${pkgver/[a-z]/.&}")
-b2sums=('0b68933a8c485dbfe14d1f4f5504a3abadb005297a0dc85c843c9c9c9f3a128632c89570ee355102ffb84c51da6bdcdbaa56b06c4e4de16f53728d07ca728173')
+source=("git+https://gitlab.gnome.org/World/gedit/libgedit-tepl.git?signed#tag=${pkgver/[a-z]/.&}")
+b2sums=(bfc9d4582727f04e93e206a0f7303ec34d50b54f3435dd372533920b280d037c5b8b25515a86cf090257e9dd4432cc3a7fa67d82be2a44ced6a07d57edee55fb)
+validpgpkeys=(08C0A6B1A08310A45363B328426F014A261FD87F) # Sébastien Wilmet <swilmet@mailfence.com>
 
 build() {
   artix-meson $pkgname build
