--- a/world/python-rdflib/.artixlinux/pkgbase.yaml
+++ b/world/python-rdflib/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-rdflib
-  version: 7.1.1-2
+  version: 7.1.2-1
   arch:
     - any
   pkgname:
     - python-rdflib
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 7.1.1-2
+    version: 7.1.2-1
     packages:
-      - python-rdflib-7.1.1-2-any.pkg.tar.zst
+      - python-rdflib-7.1.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
