--- a/world/python-voluptuous/.artixlinux/pkgbase.yaml
+++ b/world/python-voluptuous/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-voluptuous
-  version: 0.14.2-3
+  version: 0.15.0-1
   arch:
     - any
   pkgname:
     - python-voluptuous
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.14.2-3
+    version: 0.15.0-1
     packages:
-      - python-voluptuous-0.14.2-3-any.pkg.tar.zst
+      - python-voluptuous-0.15.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
