--- a/world/python-webtest/.artixlinux/pkgbase.yaml
+++ b/world/python-webtest/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-webtest
-  version: 3.0.0-7
+  version: 3.0.1-1
   arch:
     - any
   pkgname:
     - python-webtest
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.0.0-7
+    version: 3.0.1-1
     packages:
-      - python-webtest-3.0.0-7-any.pkg.tar.zst
+      - python-webtest-3.0.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
