--- a/world/qpdf/.artixlinux/pkgbase.yaml
+++ b/world/qpdf/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: qpdf
-  version: 12.0.0-1
+  version: 12.1.0-1
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - qpdf-docs
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 12.0.0-1
+    version: 12.1.0-1
     packages:
-      - qpdf-12.0.0-1-x86_64.pkg.tar.zst
-      - qpdf-docs-12.0.0-1-x86_64.pkg.tar.zst
+      - qpdf-12.1.0-1-x86_64.pkg.tar.zst
+      - qpdf-docs-12.1.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
