--- a/world/towncrier/.artixlinux/pkgbase.yaml
+++ b/world/towncrier/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: towncrier
-  version: 24.7.0-2
+  version: 24.7.1-1
   arch:
     - any
   pkgname:
     - towncrier
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 24.7.0-2
+    version: 24.7.1-1
     packages:
-      - towncrier-24.7.0-2-any.pkg.tar.zst
+      - towncrier-24.7.1-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
