--- a/world/ipython/.artixlinux/pkgbase.yaml
+++ b/world/ipython/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: ipython
-  version: 9.0.2-1
+  version: 9.1.0-1
   arch:
     - any
   pkgname:
@@ -28,13 +28,12 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: 9.0.1-1
-    packages:
-      - ipython-9.0.1-1-any.pkg.tar.zst
+    version: null
+    packages: []
   world:
-    version: 9.0.2-1
+    version: 9.1.0-1
     packages:
-      - ipython-9.0.2-1-any.pkg.tar.zst
+      - ipython-9.1.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
