--- a/world/samba/.artixlinux/pkgbase.yaml
+++ b/world/samba/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: samba
-  version: 2:4.22.0-1
+  version: 2:4.22.1-1
   arch:
     - x86_64
   pkgname:
@@ -11,11 +11,11 @@ pkgbase:
     - samba
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -34,12 +34,12 @@ repos:
     version: null
     packages: []
   world:
-    version: 2:4.22.0-1
+    version: 2:4.22.1-1
     packages:
-      - libwbclient-2:4.22.0-1-x86_64.pkg.tar.zst
-      - ldb-2:4.22.0-1-x86_64.pkg.tar.zst
-      - smbclient-2:4.22.0-1-x86_64.pkg.tar.zst
-      - samba-2:4.22.0-1-x86_64.pkg.tar.zst
+      - libwbclient-2:4.22.1-1-x86_64.pkg.tar.zst
+      - ldb-2:4.22.1-1-x86_64.pkg.tar.zst
+      - smbclient-2:4.22.1-1-x86_64.pkg.tar.zst
+      - samba-2:4.22.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
