--- a/world/nftables/PKGBUILD
+++ b/world/nftables/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=nftables
 epoch=1
-pkgver=1.1.1
-pkgrel=2
+pkgver=1.1.2
+pkgrel=1
 pkgdesc='Netfilter tables userspace tools'
 arch=('x86_64')
 url='https://netfilter.org/projects/nftables/'
@@ -13,11 +13,12 @@ optdepends=('python: Python bindings')
 makedepends=('asciidoc' 'python' 'python-setuptools' 'python-build'
              'python-installer' 'python-wheel')
 backup=('etc/nftables.conf')
-validpgpkeys=('37D964ACC04981C75500FB9BD55D978A8A1420E4') # Netfilter Core Team
+validpgpkeys=('8C5F7146A1757A65E2422A94D70D1A666ACF2B21') # Netfilter Core Team
 source=("https://netfilter.org/projects/nftables/files/nftables-$pkgver.tar.xz"{,.sig}
-        'nftables.conf')
+        'nftables.conf'
+        )
 install=nftables.install
-sha256sums=('6358830f3a64f31e39b0ad421d7dadcd240b72343ded48d8ef13b8faf204865a'
+sha256sums=('822f1f7c4059e8420387c302bd603cc0eb8cbfe403fa2e3f78c8ddb7f0d53bbc'
             'SKIP'
             'f83d6f2f99f306866850c60ff0e343bbd9bc0c989d333ebe288563f7be4afe20')
 
