--- a/world/python-cssselect2/.artixlinux/pkgbase.yaml
+++ b/world/python-cssselect2/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-cssselect2
-  version: 0.7.0-6
+  version: 0.8.0-1
   arch:
     - any
   pkgname:
     - python-cssselect2
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.7.0-6
+    version: 0.8.0-1
     packages:
-      - python-cssselect2-0.7.0-6-any.pkg.tar.zst
+      - python-cssselect2-0.8.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
