--- a/world/python-django-crispy-forms/.artixlinux/pkgbase.yaml
+++ b/world/python-django-crispy-forms/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-django-crispy-forms
-  version: 2.3-3
+  version: 2.4-1
   arch:
     - any
   pkgname:
     - python-django-crispy-forms
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.3-3
+    version: 2.4-1
     packages:
-      - python-django-crispy-forms-2.3-3-any.pkg.tar.zst
+      - python-django-crispy-forms-2.4-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
