--- a/world/python-h2/.artixlinux/pkgbase.yaml
+++ b/world/python-h2/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-h2
-  version: 4.1.0-5
+  version: 4.2.0-1
   arch:
     - any
   pkgname:
     - python-h2
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.1.0-5
+    version: 4.2.0-1
     packages:
-      - python-h2-4.1.0-5-any.pkg.tar.zst
+      - python-h2-4.2.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
