--- a/world/python-hishel/.artixlinux/pkgbase.yaml
+++ b/world/python-hishel/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: python-hishel
-  version: 0.1.1-3
+  version: 0.1.2-1
   arch:
     - any
   pkgname:
     - python-hishel
 actions:
   addRepo: world
-  removeRepo: world-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.1-3
+    version: 0.1.2-1
     packages:
-      - python-hishel-0.1.1-3-any.pkg.tar.zst
+      - python-hishel-0.1.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
