--- a/world/python-httpcore/.artixlinux/pkgbase.yaml
+++ b/world/python-httpcore/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-httpcore
-  version: 1.0.7-2
+  version: 1.0.8-1
   arch:
     - any
   pkgname:
     - python-httpcore
 actions:
   addRepo: world
-  removeRepo: world-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -28,13 +28,12 @@ repos:
     version: null
     packages: []
   world-gremlins:
-    version: 1.0.7-1
-    packages:
-      - python-httpcore-1.0.7-1-any.pkg.tar.zst
+    version: null
+    packages: []
   world:
-    version: 1.0.7-2
+    version: 1.0.8-1
     packages:
-      - python-httpcore-1.0.7-2-any.pkg.tar.zst
+      - python-httpcore-1.0.8-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
