--- a/world/python-ipywidgets/.artixlinux/pkgbase.yaml
+++ b/world/python-ipywidgets/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-ipywidgets
-  version: 8.1.5-2
+  version: 8.1.6-1
   arch:
     - any
   pkgname:
     - python-ipywidgets
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 8.1.5-2
+    version: 8.1.6-1
     packages:
-      - python-ipywidgets-8.1.5-2-any.pkg.tar.zst
+      - python-ipywidgets-8.1.6-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
