--- a/world/python-kiwisolver/.artixlinux/pkgbase.yaml
+++ b/world/python-kiwisolver/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-kiwisolver
-  version: 1.4.5-5
+  version: 1.4.6-1
   arch:
     - x86_64
   pkgname:
     - python-kiwisolver
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.4.5-5
+    version: 1.4.6-1
     packages:
-      - python-kiwisolver-1.4.5-5-x86_64.pkg.tar.zst
+      - python-kiwisolver-1.4.6-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
