--- a/world/python-ml-dtypes/.artixlinux/pkgbase.yaml
+++ b/world/python-ml-dtypes/.artixlinux/pkgbase.yaml
@@ -2,18 +2,18 @@
 team: world
 pkgbase:
   name: python-ml-dtypes
-  version: 0.5.0-2
+  version: 0.5.2-1
   arch:
     - x86_64
   pkgname:
     - python-ml-dtypes
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.5.0-2
+    version: 0.5.2-1
     packages:
-      - python-ml-dtypes-0.5.0-2-x86_64.pkg.tar.zst
+      - python-ml-dtypes-0.5.2-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
