--- a/world/python-pyflakes/.artixlinux/pkgbase.yaml
+++ b/world/python-pyflakes/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-pyflakes
-  version: 3.2.0-3
+  version: 3.3.2-1
   arch:
     - any
   pkgname:
     - python-pyflakes
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.2.0-3
+    version: 3.3.2-1
     packages:
-      - python-pyflakes-3.2.0-3-any.pkg.tar.zst
+      - python-pyflakes-3.3.2-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
