--- a/world/rpm-sequoia/.artixlinux/pkgbase.yaml
+++ b/world/rpm-sequoia/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: rpm-sequoia
-  version: 1.7.0-1
+  version: 1.8.0-1
   arch:
     - x86_64
   pkgname:
     - rpm-sequoia
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.7.0-1
+    version: 1.8.0-1
     packages:
-      - rpm-sequoia-1.7.0-1-x86_64.pkg.tar.zst
+      - rpm-sequoia-1.8.0-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
