--- a/system/inetutils/.artixlinux/pkgbase.yaml
+++ b/system/inetutils/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: inetutils
-  version: 2.5-1
+  version: 2.6-1
   arch:
     - x86_64
   pkgname:
@@ -22,9 +22,9 @@ repos:
     version: null
     packages: []
   system:
-    version: 2.5-1
+    version: 2.6-1
     packages:
-      - inetutils-2.5-1-x86_64.pkg.tar.zst
+      - inetutils-2.6-1-x86_64.pkg.tar.zst
   world-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: system
