--- a/world/java21-openjdk/.artixlinux/pkgbase.yaml
+++ b/world/java21-openjdk/.artixlinux/pkgbase.yaml
@@ -2,7 +2,7 @@
 team: world
 pkgbase:
   name: java21-openjdk
-  version: 21.0.6.u7-1
+  version: 21.0.7.u6-1
   arch:
     - x86_64
   pkgname:
@@ -13,11 +13,11 @@ pkgbase:
     - openjdk21-doc
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -36,13 +36,13 @@ repos:
     version: null
     packages: []
   world:
-    version: 21.0.6.u7-1
+    version: 21.0.7.u6-1
     packages:
-      - jre21-openjdk-headless-21.0.6.u7-1-x86_64.pkg.tar.zst
-      - jre21-openjdk-21.0.6.u7-1-x86_64.pkg.tar.zst
-      - jdk21-openjdk-21.0.6.u7-1-x86_64.pkg.tar.zst
-      - openjdk21-src-21.0.6.u7-1-x86_64.pkg.tar.zst
-      - openjdk21-doc-21.0.6.u7-1-x86_64.pkg.tar.zst
+      - jre21-openjdk-headless-21.0.7.u6-1-x86_64.pkg.tar.zst
+      - jre21-openjdk-21.0.7.u6-1-x86_64.pkg.tar.zst
+      - jdk21-openjdk-21.0.7.u6-1-x86_64.pkg.tar.zst
+      - openjdk21-src-21.0.7.u6-1-x86_64.pkg.tar.zst
+      - openjdk21-doc-21.0.7.u6-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
