--- a/world/java8-openjdk/.artixlinux/pkgbase.yaml
+++ b/world/java8-openjdk/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: java8-openjdk
-  version: 8.442.u06-1
+  version: 8.452.u09-1
   arch:
     - x86_64
   pkgname:
@@ -12,11 +12,11 @@ pkgbase:
     - openjdk8-doc
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -35,13 +35,13 @@ repos:
     version: null
     packages: []
   world:
-    version: 8.442.u06-1
+    version: 8.452.u09-1
     packages:
-      - jre8-openjdk-headless-8.442.u06-1-x86_64.pkg.tar.zst
-      - jre8-openjdk-8.442.u06-1-x86_64.pkg.tar.zst
-      - jdk8-openjdk-8.442.u06-1-x86_64.pkg.tar.zst
-      - openjdk8-src-8.442.u06-1-x86_64.pkg.tar.zst
-      - openjdk8-doc-8.442.u06-1-x86_64.pkg.tar.zst
+      - jre8-openjdk-headless-8.452.u09-1-x86_64.pkg.tar.zst
+      - jre8-openjdk-8.452.u09-1-x86_64.pkg.tar.zst
+      - jdk8-openjdk-8.452.u09-1-x86_64.pkg.tar.zst
+      - openjdk8-src-8.452.u09-1-x86_64.pkg.tar.zst
+      - openjdk8-doc-8.452.u09-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
