--- a/world/telepathy-gabble/.artixlinux/pkgbase.yaml
+++ b/world/telepathy-gabble/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: telepathy-gabble
-  version: 0.18.4-4
+  version: 0.18.4-5
   arch:
     - x86_64
   pkgname:
     - telepathy-gabble
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.18.4-4
+    version: 0.18.4-5
     packages:
-      - telepathy-gabble-0.18.4-4-x86_64.pkg.tar.zst
+      - telepathy-gabble-0.18.4-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
