--- a/world/aws-c-http/.artixlinux/pkgbase.yaml
+++ b/world/aws-c-http/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: aws-c-http
-  version: 0.9.6-1
+  version: 0.9.7-1
   arch:
     - x86_64
   pkgname:
     - aws-c-http
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.9.6-1
+    version: 0.9.7-1
     packages:
-      - aws-c-http-0.9.6-1-x86_64.pkg.tar.zst
+      - aws-c-http-0.9.7-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
