--- a/world/yelp/.artixlinux/pkgbase.yaml
+++ b/world/yelp/.artixlinux/pkgbase.yaml
@@ -1,17 +1,17 @@
 ---
 pkgbase:
   name: yelp
-  version: 42.2-2
+  version: 42.2-3
   arch:
     - x86_64
   pkgname:
     - yelp
 actions:
-  addRepo: null
+  addRepo: world
   removeRepo: null
-  triggersBuild: false
+  triggersBuild: true
   triggersRebuild: false
-  triggersRepoAdd: false
+  triggersRepoAdd: true
   triggersRepoRemove: false
   triggersNoCheck: false
 repos:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 42.2-2
+    version: 42.2-3
     packages:
-      - yelp-42.2-2-x86_64.pkg.tar.zst
+      - yelp-42.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
