--- a/galaxy/linux-zen/PKGBUILD
+++ b/galaxy/linux-zen/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgbase=linux-zen
-pkgver=6.13.8.zen1
+pkgver=6.14.2.zen1
 pkgrel=1
 pkgdesc='Linux ZEN'
 url='https://github.com/zen-kernel/zen-kernel'
@@ -45,16 +45,16 @@ validpgpkeys=(
   83BC8889351B5DEBBB68416EB8AC08600F108CDF  # Jan Alexander Steffens (heftig)
 )
 # https://www.kernel.org/pub/linux/kernel/v6.x/sha256sums.asc
-sha256sums=('259afa59d73d676bec2ae89beacd949e08d54d3f70a7f8b0a742315095751abb'
+sha256sums=('c5c682a354ea3190139357a57d34a79e5c37221ace823a938e10116b577a2e1b'
             'SKIP'
-            '05da663bb9b6ec9ffbbbad47dbab232e8071952fa9b22a212e2706d3ffc4f38f'
+            '433091be5e04cb49a1c1a8d8b6a3220413fea3b897d998fe10973c14933abd27'
             'SKIP'
-            '30372e75142c7bd8ba988034d72b1d17031d1a562d06e4b56170089099282153')
-b2sums=('c20916a44a07d355ba8337229f102cd507deae92c88576040965e909fa89c09f98611746a8c8f249bc3dcf492238ce3f08c48f523670ccad4bd7ec21622806af'
+            '6c51ff50357e6ca5bf4aa18e7b8159c352c9862b9f161afbda65c27594b6b130')
+b2sums=('ebba8a341d180887bbe125b23a3ac54ca7439eded877930f7b7df9a5ed3378701523e0cde972b520eaedf7f24d70d4d8db62db103e21943abeb35f9c1c91e4a7'
         'SKIP'
-        '0228964c400369e8a81878e9707e5e2f62f8bcbdbbb2eb56c4576a742910e0422f66c01404fc7c5b58608eb01de7f5c98bb696971dcb525c679fcc19d9b76c77'
+        '0420f497ba3c577b212ebb3b70b416033c252b37704cc19252672ca0b58b5ec0d994736dab3f652dfc283740b49f877164559c3697e2b6f14db0a49fcbaa25a0'
         'SKIP'
-        '74a249c731a73b761aba30bd79d31533705421370fd8da26b17c3b0f83916a2c68f5ecf49f8df5706a0c7f8620b663e5bbc5f3fe6be35f7be2bbef6747c0ad9e')
+        '7e404ce123a45d2da7554ed2b33982f1c3a8c5b7191ddc4acfdcd8b86f57bf920faf530f9b468d98f8bca5619b2b18a418a4c255cadb76a8f9768b38e45502f0')
 
 export KBUILD_BUILD_HOST=artixlinux
 export KBUILD_BUILD_USER=$pkgbase
@@ -107,6 +107,7 @@ _package() {
   )
   provides=(
     KSMBD-MODULE
+    NTSYNC-MODULE
     UKSMD-BUILTIN
     VHBA-MODULE
     VIRTUALBOX-GUEST-MODULES
