--- a/world/icmake/.artixlinux/pkgbase.yaml
+++ b/world/icmake/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: icmake
-  version: 10.03.03-2
+  version: 13.00.02-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 10.03.03-2
+    version: 13.00.02-1
     packages:
-      - icmake-10.03.03-2-x86_64.pkg.tar.zst
+      - icmake-13.00.02-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
