--- a/world/libimobiledevice/.artixlinux/pkgbase.yaml
+++ b/world/libimobiledevice/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libimobiledevice
-  version: 1.3.0-15
+  version: 1.3.0-16
   arch:
     - x86_64
   pkgname:
     - libimobiledevice
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.3.0-15
+    version: 1.3.0-16
     packages:
-      - libimobiledevice-1.3.0-15-x86_64.pkg.tar.zst
+      - libimobiledevice-1.3.0-16-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
