--- a/world/libshout/.artixlinux/pkgbase.yaml
+++ b/world/libshout/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libshout
-  version: 1:2.4.6-3
+  version: 1:2.4.6-4
   arch:
     - x86_64
   pkgname:
     - libshout
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:2.4.6-3
+    version: 1:2.4.6-4
     packages:
-      - libshout-1:2.4.6-3-x86_64.pkg.tar.zst
+      - libshout-1:2.4.6-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
