--- a/world/rocm-hip-sdk/PKGBUILD
+++ b/world/rocm-hip-sdk/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(rocm-hip-sdk
          rocm-language-runtime
          rocm-ml-sdk
          rocm-ml-libraries)
-pkgver=6.0.2
+pkgver=6.3.3
 pkgrel=1
 arch=('any')
 license=('LicenseRef-None')
@@ -60,8 +60,7 @@ package_rocm-opencl-sdk() {
     pkgdesc='Develop OpenCL-based applications for AMD platforms'
     depends=('rocm-core'
              'hsa-rocr'
-             'rocm-opencl-runtime'
-             'hsakmt-roct')
+             'rocm-opencl-runtime')
 }
 
 package_rocm-hip-runtime() {
@@ -77,7 +76,6 @@ package_rocm-hip-runtime() {
 package_rocm-language-runtime() {
     pkgdesc='ROCm runtime'
     depends=('rocm-core'
-             'hsakmt-roct'
              'hsa-rocr'
              'rocm-device-libs'
              'comgr')
