--- a/world/rocblas/.artixlinux/pkgbase.yaml
+++ b/world/rocblas/.artixlinux/pkgbase.yaml
@@ -1,7 +1,8 @@
 ---
+team: world
 pkgbase:
   name: rocblas
-  version: 6.0.0-1
+  version: 6.3.3-1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 6.0.0-1
+    version: 6.3.3-1
     packages:
-      - rocblas-6.0.0-1-x86_64.pkg.tar.zst
+      - rocblas-6.3.3-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
